--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,84 @@ services:
     networks:
       - devops-network
 
+  # MySQL para o Zabbix
+  mysql:
+    image: mysql:8.0
+    container_name: mysql-zabbix
+    environment:
+      - MYSQL_DATABASE=zabbix
+      - MYSQL_USER=zabbix
+      - MYSQL_PASSWORD=zabbix_pass
+      - MYSQL_ROOT_PASSWORD=root_pass
+    volumes:
+      - mysql-data:/var/lib/mysql
+    restart: unless-stopped
+    networks:
+      - devops-network
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_bin
+
+  # Zabbix Server
+  zabbix-server:
+    image: zabbix/zabbix-server-mysql:alpine-latest
+    container_name: zabbix-server
+    environment:
+      - DB_SERVER_HOST=mysql
+      - MYSQL_DATABASE=zabbix
+      - MYSQL_USER=zabbix
+      - MYSQL_PASSWORD=zabbix_pass
+      - MYSQL_ROOT_PASSWORD=root_pass
+    ports:
+      - "10051:10051"
+    depends_on:
+      - mysql
+    restart: unless-stopped
+    networks:
+      - devops-network
+
+  # Zabbix Web Interface
+  zabbix-web:
+    image: zabbix/zabbix-web-nginx-mysql:alpine-latest
+    container_name: zabbix-web
+    environment:
+      - DB_SERVER_HOST=mysql
+      - MYSQL_DATABASE=zabbix
+      - MYSQL_USER=zabbix
+      - MYSQL_PASSWORD=zabbix_pass
+      - ZBX_SERVER_HOST=zabbix-server
+      - PHP_TZ=America/Sao_Paulo
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+      - zabbix-server
+    restart: unless-stopped
+    networks:
+      - devops-network
+
+  # Grafana
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana-devops
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin123
+      - GF_INSTALL_PLUGINS=alexanderzobnin-zabbix-app
+    ports:
+      - "3001:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - zabbix-server
+    restart: unless-stopped
+    networks:
+      - devops-network
+
 networks:
   devops-network:
     driver: bridge
+
+volumes:
+  mysql-data:
+  grafana-data:
