--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,22 @@ services:
     build: ./backend
     container_name: backend-devops
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT}:3000"
     environment:
-      - MONGO_URL=mongodb://devops_user:SuaSenhaForte123@3.22.171.5:27017/devops?authSource=admin
+      - MONGO_URL=mongodb://${MONGODB_USER}:${MONGODB_PASSWORD}@${MONGODB_IP}:27017/${MONGODB_DATABASE}?authSource=admin
       - PORT=3000
     restart: unless-stopped
     networks:
       - devops-network
 
   frontend:
-    build: ./frontend
+    build: 
+      context: ./frontend
+      args:
+        - API_URL=http://${APP_IP}:${BACKEND_PORT}
     container_name: frontend-devops
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT}:80"
     depends_on:
       - backend
     restart: unless-stopped
@@ -29,10 +32,10 @@ services:
     image: mysql:8.0
     container_name: mysql-zabbix
     environment:
-      - MYSQL_DATABASE=zabbix
-      - MYSQL_USER=zabbix
-      - MYSQL_PASSWORD=zabbix_pass
-      - MYSQL_ROOT_PASSWORD=root_pass
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql
     restart: unless-stopped
@@ -48,10 +51,10 @@ services:
     container_name: zabbix-server
     environment:
       - DB_SERVER_HOST=mysql
-      - MYSQL_DATABASE=zabbix
-      - MYSQL_USER=zabbix
-      - MYSQL_PASSWORD=zabbix_pass
-      - MYSQL_ROOT_PASSWORD=root_pass
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     ports:
       - "10051:10051"
     depends_on:
@@ -66,13 +69,13 @@ services:
     container_name: zabbix-web
     environment:
       - DB_SERVER_HOST=mysql
-      - MYSQL_DATABASE=zabbix
-      - MYSQL_USER=zabbix
-      - MYSQL_PASSWORD=zabbix_pass
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - ZBX_SERVER_HOST=zabbix-server
       - PHP_TZ=America/Sao_Paulo
     ports:
-      - "8080:8080"
+      - "${ZABBIX_WEB_PORT}:8080"
     depends_on:
       - mysql
       - zabbix-server
@@ -85,11 +88,11 @@ services:
     image: grafana/grafana:latest
     container_name: grafana-devops
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin123
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
       - GF_INSTALL_PLUGINS=alexanderzobnin-zabbix-app
     ports:
-      - "3001:3000"
+      - "${GRAFANA_PORT}:3000"
     volumes:
       - grafana-data:/var/lib/grafana
     depends_on:
