--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@
 MONGODB_IP=3.15.174.116
 APP_IP=18.225.5.108
 
+
 # Credenciais MongoDB
 MONGODB_USER=devops_user
 MONGODB_PASSWORD=SuaSenhaForte123
 MONGODB_DATABASE=devops
+MONGO_URL="mongodb://${MONGODB_USER}:${MONGODB_PASSWORD}@${MONGODB_IP}:27017/${MONGODB_DATABASE}?authSource=admin"
 
 # Credenciais MySQL/Zabbix
 MYSQL_ROOT_PASSWORD=root_pass
