--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # IPs das instâncias AWS
-MONGODB_IP=3.15.174.116
-APP_IP=18.216.234.10
+MONGODB_IP=3.144.194.217
+APP_IP=localhost
 
 
 # Credenciais MongoDB
