Transformação da aplicação em uma biblioteca

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,9 @@ RUN npm install
 
 COPY . .
 
+# Criar diretório para uploads de PDFs
+RUN mkdir -p /app/uploads
+
 EXPOSE 3000
 
 CMD ["npm", "start"]
